get-otp and login implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.datasource.password=root
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#twilio specific properties
+twilio.account_sid=${ACCOUNT_SID}
+twilio.auth_token=${AUTH_TOKEN}
+twilio.trial_number=${TRAIL_NUMBER}
+
